--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,5 @@
 version: 2
 jobs:
-  build:
+  build-android:
     docker:
-      - image: debian:stretch
-
-    steps:
-      - checkout
-
-      - run:
-          name: Greeting
-          command: echo Hello, world.
-
-      - run:
-          name: Print the Current Time
-          command: date
+      - image: circleci/android:api-25-alpha
